feat: Improve contact picker integration
Update PWA manifest and iOS icon to use a local asset for consistency.
Refine contact picker API usage for better compatibility and fallback.
Navigate directly to manual entry if contact picker is unavailable or fails, rather than showing an alert.

--- a/manifest.json
+++ b/manifest.json
@@ -8,12 +8,12 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/HDFC_Bank_Logo.svg/192px-HDFC_Bank_Logo.svg.png",
+      "src": "/icon.png",
       "sizes": "192x192",
       "type": "image/png"
     },
     {
-      "src": "https://upload.wikimedia.org/wikipedia/commons/thumb/2/28/HDFC_Bank_Logo.svg/512px-HDFC_Bank_Logo.svg.png",
+      "src": "/icon.png",
       "sizes": "512x512",
       "type": "image/png"
     }
