--- a/manifest.json
+++ b/manifest.json
@@ -8,15 +8,15 @@
   "orientation": "portrait",
   "icons": [
     {
-      "src": "/icon.png",
+      "src": "https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg",
       "sizes": "192x192",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     },
     {
-      "src": "/icon.png",
+      "src": "https://is1-ssl.mzstatic.com/image/thumb/Purple211/v4/a4/83/30/a4833010-062e-8367-176f-007f59d288d0/AppIcon-0-0-1x_U007emarketing-0-10-0-85-220.png/512x512bb.jpg",
       "sizes": "512x512",
-      "type": "image/png",
+      "type": "image/jpeg",
       "purpose": "any maskable"
     }
   ]
