--- a/package.json
+++ b/package.json
@@ -9,14 +9,14 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "lucide-react": "^0.554.0",
+    "html2canvas": "^1.4.1",
     "react": "^19.2.0",
     "react-dom": "^19.2.0",
+    "lucide-react": "^0.555.0",
+    "@google/genai": "^1.30.0",
     "react-router-dom": "^7.9.6",
-    "jsqr": "^1.4.0",
     "react-webcam": "^7.2.0",
-    "html2canvas": "1.4.1",
-    "@google/genai": "^1.29.1"
+    "jsqr": "^1.4.0"
   },
   "devDependencies": {
     "@types/node": "^22.14.0",
